src/main/kotlin/com/example/demka/shared/errors/controllers/PermissionErrorController.kt
package ru.umom.hackaton.shared.errors.controllers

import org.springframework.http.HttpStatus
import org.springframework.http.ResponseEntity
import org.springframework.web.bind.annotation.ExceptionHandler
import org.springframework.web.bind.annotation.RestControllerAdvice
import ru.umom.hackaton.shared.errors.common.PermissionError

@RestControllerAdvice
class PermissionErrorController {

    @ExceptionHandler(PermissionError::class)
    fun onPermissionError(error: PermissionError): ResponseEntity<*> = ResponseEntity(error.message, HttpStatus.FORBIDDEN)
}